Bug 108842 - Cannot use enum array with -fno-druntime
Summary: Cannot use enum array with -fno-druntime
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: d (show other bugs)
Version: 13.0
: P3 normal
Target Milestone: ---
Assignee: Iain Buclaw
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-18 07:34 UTC by zach-gcc
Modified: 2023-07-07 20:01 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zach-gcc 2023-02-18 07:34:35 UTC
I have test.d:

```
enum int[] x = [0, 1, 2];
```

and an object.d:

```
module object;
```

I get an error when I try to compile:

```
$ gdc -c -fno-druntime test.d
test.d:1:16: error: expression '[0, 1, 2]' requires 'object.TypeInfo' and cannot be used with '-fno-rtti'
    1 | enum int[] x = [0, 1, 2];
      |                ^
test.d:1:16: error: 'object.TypeInfo' could not be found, but is implicitly used
    1 | enum int[] x = [0, 1, 2];
      |                ^
```

This compiles fine with DMD and LDC with `-betterC` and the same object.d (custom runtime).
Comment 1 GCC Commits 2023-07-07 19:21:21 UTC
The master branch has been updated by Iain Buclaw <ibuclaw@gcc.gnu.org>:

https://gcc.gnu.org/g:f934c5753849f7c48c6a3abfcd73b8f6008e8371

commit r14-2385-gf934c5753849f7c48c6a3abfcd73b8f6008e8371
Author: Iain Buclaw <ibuclaw@gdcproject.org>
Date:   Fri Jul 7 21:06:07 2023 +0200

    d: Fix PR 108842: Cannot use enum array with -fno-druntime
    
    Restrict the generating of CONST_DECLs for D manifest constants to just
    scalars without pointers.  It shouldn't happen that a reference to a
    manifest constant has not been expanded within a function body during
    codegen, but it has been found to occur in older versions of the D
    front-end (PR98277), so if the decl of a non-scalar constant is
    requested, just return its initializer as an expression.
    
            PR d/108842
    
    gcc/d/ChangeLog:
    
            * decl.cc (DeclVisitor::visit (VarDeclaration *)): Only emit scalar
            manifest constants.
            (get_symbol_decl): Don't generate CONST_DECL for non-scalar manifest
            constants.
            * imports.cc (ImportVisitor::visit (VarDeclaration *)): New method.
    
    gcc/testsuite/ChangeLog:
    
            * gdc.dg/pr98277.d: Add more tests.
            * gdc.dg/pr108842.d: New test.
Comment 2 GCC Commits 2023-07-07 19:22:54 UTC
The releases/gcc-13 branch has been updated by Iain Buclaw <ibuclaw@gcc.gnu.org>:

https://gcc.gnu.org/g:acd679a7944a4fde8a7ed9ac739749deff9f71ba

commit r13-7547-gacd679a7944a4fde8a7ed9ac739749deff9f71ba
Author: Iain Buclaw <ibuclaw@gdcproject.org>
Date:   Fri Jul 7 21:06:07 2023 +0200

    d: Fix PR 108842: Cannot use enum array with -fno-druntime
    
    Restrict the generating of CONST_DECLs for D manifest constants to just
    scalars without pointers.  It shouldn't happen that a reference to a
    manifest constant has not been expanded within a function body during
    codegen, but it has been found to occur in older versions of the D
    front-end (PR98277), so if the decl of a non-scalar constant is
    requested, just return its initializer as an expression.
    
            PR d/108842
    
    gcc/d/ChangeLog:
    
            * decl.cc (DeclVisitor::visit (VarDeclaration *)): Only emit scalar
            manifest constants.
            (get_symbol_decl): Don't generate CONST_DECL for non-scalar manifest
            constants.
            * imports.cc (ImportVisitor::visit (VarDeclaration *)): New method.
    
    gcc/testsuite/ChangeLog:
    
            * gdc.dg/pr98277.d: Add more tests.
            * gdc.dg/pr108842.d: New test.
    
    (cherry picked from commit f934c5753849f7c48c6a3abfcd73b8f6008e8371)
Comment 3 GCC Commits 2023-07-07 19:25:01 UTC
The releases/gcc-12 branch has been updated by Iain Buclaw <ibuclaw@gcc.gnu.org>:

https://gcc.gnu.org/g:0444c2065aef569aa16e43cffc564c202a59af33

commit r12-9759-g0444c2065aef569aa16e43cffc564c202a59af33
Author: Iain Buclaw <ibuclaw@gdcproject.org>
Date:   Fri Jul 7 21:06:07 2023 +0200

    d: Fix PR 108842: Cannot use enum array with -fno-druntime
    
    Restrict the generating of CONST_DECLs for D manifest constants to just
    scalars without pointers.  It shouldn't happen that a reference to a
    manifest constant has not been expanded within a function body during
    codegen, but it has been found to occur in older versions of the D
    front-end (PR98277), so if the decl of a non-scalar constant is
    requested, just return its initializer as an expression.
    
            PR d/108842
    
    gcc/d/ChangeLog:
    
            * decl.cc (DeclVisitor::visit (VarDeclaration *)): Only emit scalar
            manifest constants.
            (get_symbol_decl): Don't generate CONST_DECL for non-scalar manifest
            constants.
            * imports.cc (ImportVisitor::visit (VarDeclaration *)): New method.
    
    gcc/testsuite/ChangeLog:
    
            * gdc.dg/pr98277.d: Add more tests.
            * gdc.dg/pr108842.d: New test.
    
    (cherry picked from commit f934c5753849f7c48c6a3abfcd73b8f6008e8371)
Comment 4 GCC Commits 2023-07-07 20:00:32 UTC
The releases/gcc-11 branch has been updated by Iain Buclaw <ibuclaw@gcc.gnu.org>:

https://gcc.gnu.org/g:eef069fe8b22229509a783c9ecb2eb659df4f5ab

commit r11-10898-geef069fe8b22229509a783c9ecb2eb659df4f5ab
Author: Iain Buclaw <ibuclaw@gdcproject.org>
Date:   Fri Jul 7 21:06:07 2023 +0200

    d: Fix PR 108842: Cannot use enum array with -fno-druntime
    
    Restrict the generating of CONST_DECLs for D manifest constants to just
    scalars without pointers.  It shouldn't happen that a reference to a
    manifest constant has not been expanded within a function body during
    codegen, but it has been found to occur in older versions of the D
    front-end (PR98277), so if the decl of a non-scalar constant is
    requested, just return its initializer as an expression.
    
            PR d/108842
    
    gcc/d/ChangeLog:
    
            * decl.cc (DeclVisitor::visit (VarDeclaration *)): Only emit scalar
            manifest constants.
            (get_symbol_decl): Don't generate CONST_DECL for non-scalar manifest
            constants.
            * imports.cc (ImportVisitor::visit (VarDeclaration *)): New method.
    
    gcc/testsuite/ChangeLog:
    
            * gdc.dg/pr98277.d: Add more tests.
            * gdc.dg/pr108842.d: New test.
    
    (cherry picked from commit f934c5753849f7c48c6a3abfcd73b8f6008e8371)
Comment 5 ibuclaw 2023-07-07 20:01:02 UTC
Fix committed and backported.