gcc/testsuite/gdc.dg/pr108842.d
@@ -1,0 +1,4 @@
+// { dg-do compile }
+// { dg-options "-fno-rtti" }
+module object;
+enum int[] x = [0, 1, 2];
